--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1159,3 +1159,22 @@ Exchange of DNA between chromosome pairs during meiosis has occurred throughout 
 	url = { https://doi.org/10.1080/03610910802439121}
 
 }
+
+@article{higham_timing_2014,
+	title = {The timing and spatiotemporal patterning of {Neanderthal} disappearance},
+	volume = {512},
+	copyright = {2014 Nature Publishing Group},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/nature13621},
+	doi = {10.1038/nature13621},
+	abstract = {The timing of Neanderthal disappearance and the extent to which they overlapped with the earliest incoming anatomically modern humans (AMHs) in Eurasia are key questions in palaeoanthropology1,2. Determining the spatiotemporal relationship between the two populations is crucial if we are to understand the processes, timing and reasons leading to the disappearance of Neanderthals and the likelihood of cultural and genetic exchange. Serious technical challenges, however, have hindered reliable dating of the period, as the radiocarbon method reaches its limit at ∼50,000 years ago3. Here we apply improved accelerator mass spectrometry 14C techniques to construct robust chronologies from 40 key Mousterian and Neanderthal archaeological sites, ranging from Russia to Spain. Bayesian age modelling was used to generate probability distribution functions to determine the latest appearance date. We show that the Mousterian ended by 41,030–39,260 calibrated years bp (at 95.4\% probability) across Europe. We also demonstrate that succeeding ‘transitional’ archaeological industries, one of which has been linked with Neanderthals (Châtelperronian)4, end at a similar time. Our data indicate that the disappearance of Neanderthals occurred at different times in different regions. Comparing the data with results obtained from the earliest dated AMH sites in Europe, associated with the Uluzzian technocomplex5, allows us to quantify the temporal overlap between the two human groups. The results reveal a significant overlap of 2,600–5,400 years (at 95.4\% probability). This has important implications for models seeking to explain the cultural, technological and biological elements involved in the replacement of Neanderthals by AMHs. A mosaic of populations in Europe during the Middle to Upper Palaeolithic transition suggests that there was ample time for the transmission of cultural and symbolic behaviours, as well as possible genetic exchanges, between the two groups.},
+	language = {en},
+	number = {7514},
+	urldate = {2019-07-03},
+	journal = {Nature},
+	author = {Higham, Tom and Douka, Katerina and Wood, Rachel and Ramsey, Christopher Bronk and Brock, Fiona and Basell, Laura and Camps, Marta and Arrizabalaga, Alvaro and Baena, Javier and Barroso-Ruíz, Cecillio and Bergman, Christopher and Boitard, Coralie and Boscato, Paolo and Caparrós, Miguel and Conard, Nicholas J. and Draily, Christelle and Froment, Alain and Galván, Bertila and Gambassini, Paolo and Garcia-Moreno, Alejandro and Grimaldi, Stefano and Haesaerts, Paul and Holt, Brigitte and Iriarte-Chiapusso, Maria-Jose and Jelinek, Arthur and Jordá Pardo, Jesús F. and Maíllo-Fernández, José-Manuel and Marom, Anat and Maroto, Julià and Menéndez, Mario and Metz, Laure and Morin, Eugène and Moroni, Adriana and Negrino, Fabio and Panagopoulou, Eleni and Peresani, Marco and Pirson, Stéphane and de la Rasilla, Marco and Riel-Salvatore, Julien and Ronchitelli, Annamaria and Santamaria, David and Semal, Patrick and Slimak, Ludovic and Soler, Joaquim and Soler, Narcís and Villaluenga, Aritza and Pinhasi, Ron and Jacobi, Roger},
+	month = aug,
+	year = {2014},
+	pages = {306--309},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/9LDXVT9D/Higham et al. - 2014 - The timing and spatiotemporal patterning of Neande.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/283SY3S6/nature13621.html:text/html}
+}
